--- a/HandWriting_models.ipynb
+++ b/HandWriting_models.ipynb
@@ -455,14 +455,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "fd14eb2e-24e4-4e83-980a-38f1d2991ccc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def graphit(images, labels, rows =1, cols = 1, start =0, zoom =2):\n",
-    "    n_images = row * cols"
+    "def graphit(images, labels, rows=1, cols=1, start=0, zoom=2):\n",
+    "  n_images = rows * cols\n",
+    "  fig, ax = plt.subplots(rows,cols,figsize=(cols * zoom, rows * zoom))\n",
+    "  for n in range(n_images):\n",
+    "    plt.subplot(rows, cols, n+1)\n",
+    "    plt.xticks([])\n",
+    "    plt.yticks([])\n",
+    "    plt.grid(False)\n",
+    "    plt.imshow(images[n+start], cmap=plt.cm.binary)\n",
+    "    # plt.imshow(images[n])\n",
+    "    plt.xlabel(\"[\" + str(n+start) + \"] is a : \" + str(labels[n+start]))\n",
+    "  plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4ca52a11-9dd8-48ca-a245-31bd37e4a7f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## now set the parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3206a39-d445-4b1a-8afa-3f46ce6716d3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
