--- a/HandWriting_models.ipynb
+++ b/HandWriting_models.ipynb
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "id": "b96c7bbf-64a8-4e11-995e-690d6d79656f",
    "metadata": {},
    "outputs": [
@@ -720,7 +720,9 @@
   {
    "cell_type": "markdown",
    "id": "b774f92e-1f46-4c69-88db-898afb926bfb",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "---\n",
     "## Evaluate the model\n",
@@ -986,34 +988,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "6a3aaa95-23b7-4cb9-8b8a-91acd5af11ff",
+   "execution_count": 34,
+   "id": "d411af47-3a60-489b-9f87-fa88f4f45740",
    "metadata": {},
    "outputs": [],
    "source": [
     "wrong = []\n",
     "for i in range(len(test_x)):\n",
     "    if np.argmax(all_predictions[i]) != test_y[i]:\n",
-    "        wrong.append(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "445ab67d-00e9-40b4-9acf-2296dc208c7a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[115, 217, 247, 259, 321, 340, 381, 445, 495, 582, 684, 691, 720, 740, 881, 947, 951, 956, 965, 1003, 1014, 1039, 1112, 1181, 1226, 1232, 1242, 1247, 1260, 1299, 1319, 1326, 1393, 1500, 1522, 1530, 1549, 1553, 1681, 1709, 1717, 1754, 1878, 1901, 1941, 1952, 1968, 1987, 2004, 2016, 2024, 2033, 2035, 2053, 2070, 2098, 2109, 2118, 2130, 2135, 2182, 2272, 2291, 2293, 2369, 2387, 2395, 2406, 2433, 2447, 2454, 2488, 2526, 2598, 2607, 2648, 2654, 2743, 2877, 2896, 2921, 2927, 2930, 2939, 3005, 3060, 3073, 3117, 3206, 3289, 3405, 3422, 3490, 3503, 3520, 3549, 3558, 3559, 3567, 3597, 3604, 3662, 3674, 3716, 3718, 3749, 3776, 3780, 3808, 3811, 3818, 3838, 3853, 3871, 3906, 3926, 3941, 3943, 4063, 4065, 4078, 4140, 4176, 4199, 4212, 4248, 4289, 4306, 4355, 4419, 4477, 4497, 4536, 4567, 4571, 4578, 4639, 4731, 4807, 4814, 4823, 4860, 4880, 4956, 4978, 5140, 5331, 5457, 5600, 5642, 5676, 5734, 5749, 5887, 5936, 5937, 5955, 5972, 5973, 6026, 6056, 6059, 6166, 6555, 6558, 6571, 6574, 6576, 6597, 6625, 6632, 6651, 6755, 6847, 7434, 7821, 7921, 8059, 8094, 8311, 8316, 8325, 8406, 8410, 8520, 8522, 8527, 9009, 9015, 9019, 9024, 9422, 9587, 9634, 9642, 9664, 9669, 9679, 9692, 9700, 9729, 9745, 9768, 9770, 9779, 9792, 9839, 9858, 9940, 9982]\n",
-      "210\n",
-      "percentage wrong 2.1 %\n"
-     ]
-    }
-   ],
-   "source": [
+    "        wrong.append(i)\n",
+    "\n",
     "print(wrong)\n",
     "print(len(wrong))\n",
     "print(\"percentage wrong\", len(wrong)/len(test_x)*100, '%')"
